--- a/webapp/index.html
+++ b/webapp/index.html
@@ -11,6 +11,7 @@
 			src="../../resources/sap-ui-core.js"
 			data-sap-ui-libs="sap.m"
 			data-sap-ui-theme="sap_belize"
+			data-sap-ui-xx-bindingSyntax="complex"
 			data-sap-ui-compatVersion="edge"
 			data-sap-ui-resourceroots='{"com.packageEXAMPLE_UI5": ""}'>
 		</script>
