--- a/webapp/index.html
+++ b/webapp/index.html
@@ -24,7 +24,8 @@
 					app: new sap.ui.core.ComponentContainer({
 						height : "100%",
 						name : "com.packageEXAMPLE_UI5"
-					})
+					}),
+					appWidthLimited: false
 				}).placeAt("content");
 			});
 		</script>
