--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,12 +8,12 @@
 		<title>EXAMPLE_UI5</title>
 
 		<script id="sap-ui-bootstrap"
-			src="../../resources/sap-ui-core.js"
+			src="https://sapui5.netweaver.ondemand.com/1.54.8/resources/sap-ui-core.js"
 			data-sap-ui-libs="sap.m"
 			data-sap-ui-theme="sap_belize"
 			data-sap-ui-xx-bindingSyntax="complex"
 			data-sap-ui-compatVersion="edge"
-			data-sap-ui-resourceroots='{"com.packageEXAMPLE_UI5": ""}'>
+			data-sap-ui-resourceroots='{"com.packageEXAMPLE_UI5" : ""}'>
 		</script>
 
 		<link rel="stylesheet" type="text/css" href="css/style.css">
